tenants/jack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-jack
  annotations:
    scheduler.alpha.kubernetes.io/tolerationsWhitelist: |
      [{"effect":"PreferNoSchedule"}]
  labels:
    starsystem.dev/tenant: "true"
    starsystem.dev/tenant-name: Jack Gledhill
    starsystem.dev/tenant-email: me@jackgledhill.com
    starsystem.dev/tenant-phone: +44 7452 980847
    # Prevent privilege escalation
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    # Warn pods that use an outdated restricted policy
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    # Audit pods using anything other than the latest version of the restricted policy
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
